--- a/caffe-easy/windows-gpu/classification_dll/classification_dll.vcxproj
+++ b/caffe-easy/windows-gpu/classification_dll/classification_dll.vcxproj
@@ -103,6 +103,9 @@
       <Command>
       </Command>
     </PostBuildEvent>
+    <CudaCompile>
+      <CodeGeneration>compute_50,sm_50;compute_30,sm_30; compute_20,sm_20; compute_35,sm_35;compute_52,sm_52</CodeGeneration>
+    </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ProjectReference Include="..\libcaffe\windows-gpu.vcxproj">
