--- a/caffe-easy/windows-gpu/create_label_map/create_label_map.vcxproj
+++ b/caffe-easy/windows-gpu/create_label_map/create_label_map.vcxproj
@@ -75,6 +75,9 @@
       <Command>
       </Command>
     </PostBuildEvent>
+    <CudaCompile>
+      <CodeGeneration>compute_30,sm_30</CodeGeneration>
+    </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -100,7 +103,7 @@
       </Command>
     </PostBuildEvent>
     <CudaCompile>
-      <CodeGeneration>compute_50,sm_50;compute_30,sm_30; compute_20,sm_20; compute_35,sm_35;compute_52,sm_52</CodeGeneration>
+      <CodeGeneration>compute_30,sm_30</CodeGeneration>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
