--- a/caffe-easy/windows-gpu/libcaffe/windows-gpu.vcxproj
+++ b/caffe-easy/windows-gpu/libcaffe/windows-gpu.vcxproj
@@ -379,7 +379,7 @@
       <Command>copy ..\..\3rd\staticlib\openblas\$(Platform)\*.dll ..\..\Build\gpu_cuda$(CC_CUDA_VERSION)\$(Configuration)\$(Platform)\</Command>
     </PostBuildEvent>
     <CudaCompile>
-      <CodeGeneration>compute_30,sm_30; compute_20,sm_20; compute_35,sm_35;compute_52,sm_52</CodeGeneration>
+      <CodeGeneration>compute_30,sm_30</CodeGeneration>
       <TargetMachinePlatform>64</TargetMachinePlatform>
     </CudaCompile>
   </ItemDefinitionGroup>
@@ -407,7 +407,7 @@
       <Command>copy ..\..\3rd\staticlib\openblas\$(Platform)\*.dll ..\..\Build\gpu_cuda$(CC_CUDA_VERSION)\$(Configuration)\$(Platform)\</Command>
     </PostBuildEvent>
     <CudaCompile>
-      <CodeGeneration>compute_50,sm_50;compute_30,sm_30; compute_20,sm_20; compute_35,sm_35;compute_52,sm_52</CodeGeneration>
+      <CodeGeneration>compute_30,sm_30</CodeGeneration>
       <TargetMachinePlatform>64</TargetMachinePlatform>
     </CudaCompile>
   </ItemDefinitionGroup>
